[package]
name = "dist_lock"
version = "0.0.1"
authors = ["chenglong.wang <tiny.wcl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
chrono = "0.4.26"
thiserror = "1.0.44"
redis = { version = "0.23.0", optional = true }
tokio = { version = "1.29.1", features = ["macros"], optional = true }
async-std = { version = "1.12.0", optional = true }
async-trait = { version = "0.1.73", optional = true }
futures = { version = "0.3.28", optional = true }
gethostname = "0.4.3"
r2d2 = "0.8.10"

[features]
default = ["redis_tokio_provider"]
redis_provider = ["redis/cluster"]
redis_tokio_provider = [
    "redis/tokio-comp",
    "redis/cluster-async",
    "tokio",
    "futures",
    "async-trait",
]
