[package]
name = "dist_lock"
version = "0.0.1"
authors = ["chenglong.wang <tiny.wcl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "codegen"]

[dependencies]
chrono = "0.4.26"
thiserror = "1.0.44"
gethostname = "0.4.3"
cfg-if = "1.0.0"
dist_lock_codegen = { path = "./codegen", version = "*", optional = true }
redis = { version = "0.23.0", optional = true }
diesel = { version = "2.1.0", features = ["chrono"], optional = true }
tokio = { version = "1.29.1", features = ["macros"], optional = true }
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-trait = { version = "0.1.73", optional = true }
r2d2 = { version = "0.8.10", optional = true }
crossbeam-utils = { version = "0.8.16", optional = true }

[features]
default = ["redis_async_std_provider"]

# redis
redis_provider = ["redis/cluster", "dist_lock_codegen/redis"]
redis_r2d2_provider = ["redis_provider", "redis/r2d2", "r2d2", "dist_lock_codegen/redis"]
redis_tokio_provider = [
    "redis/tokio-comp",
    "redis/cluster-async",
    "tokio/rt-multi-thread",
    "async-trait",
    "crossbeam-utils",
    "dist_lock_codegen/redis",
    "dist_lock_codegen/async",
]
redis_async_std_provider = [
    "redis/async-std-comp",
    "redis/cluster-async",
    "async-std",
    "async-trait",
    "crossbeam-utils",
    "dist_lock_codegen/redis",
    "dist_lock_codegen/async",
]

# diesel
diesel_sqlite = ["diesel/sqlite", "dist_lock_codegen/diesel"]
diesel_postgres = ["diesel/postgres", "dist_lock_codegen/diesel"]
diesel_mysql = ["diesel/mysql", "dist_lock_codegen/diesel"]
diesel_sqlite_r2d2 = ["diesel_sqlite", "diesel/r2d2", "r2d2", "dist_lock_codegen/diesel"]
diesel_postgres_r2d2 = ["diesel_postgres", "diesel/r2d2", "r2d2", "dist_lock_codegen/diesel"]
diesel_mysql_r2d2 = ["diesel_mysql", "diesel/r2d2", "r2d2", "dist_lock_codegen/diesel"]
