[package]
name = "dist_lock_codegen"
version = "0.0.1"
authors = ["chenglong.wang <tiny.wcl@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
humantime = "2.1.0"
cfg-if = "1.0.0"

[features]
redis = []
diesel = []
zookeeper = []

async = []
