[package]
name = "dist_lock_codegen"
description = "Distributed lock macro"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
humantime = "2.1.0"
cfg-if = "1.0.0"

[features]
default = ["redis"]

redis = []
diesel = []
zookeeper = []

async = []
